Remove a footer in all pages and add one of the new file are about.html in it and it's totally for team use yet

--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
             <div class="menu">
                 <a href="Home.html">Home</a>
                 <a href="#">Menu</a>
-                <a href="#">About</a>
+                <a href="about.html">About</a>
                 <a href="#">Maps</a>
                 <a href="#">Blogs</a>
                 <a href="Contact.html">Contact</a>
@@ -27,15 +27,11 @@
                 <h1>DO COME & VISIT<span class="change_content"> </span></h1>
                 <p>"India once is not enough"</p>
                 <a href="login page.html" class="btnone">Login here</a>
-                <a  href="Sign.html" class="btntwo">Signup here</a>
             </section>
         </main>
         
 
     </header>
-    <footer><br><h3>Footer</h3><br>
-        <p>Features | About | Testimonials | Contact Us</p><br><br>
-        &copy;Copyright 2022
-    </footer>
+    
 </body>
 </html>
