--- a/login page.html
+++ b/login page.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Maps</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="Contact.html">Contact</a></li>
@@ -60,9 +60,6 @@
         </div>
     </div>
   </div>
-  <footer><br><h3>Footer</h3><br>
-    <p>Features | About | Testimonials | Contact Us</p><br><br>
-    &copy;Copyright 2022
-</footer>
+  
 </body>
 </html>
