--- a/Contact.html
+++ b/Contact.html
@@ -19,7 +19,7 @@
         <ul class="right">
             <li><a href="Home.html">Home</a></li>
                 <li><a href="#">Menu</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Maps</a></li>
                 <li><a href="#">Blogs</a></li>
                 <li><a href="Contact.html">Contact</a></li>
