--- a/Sign.html
+++ b/Sign.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=1, initial-scale=q">
     <link rel="stylesheet" href="/css/sign.css">
+    <link href="https://fonts.googleapis.com/css?family=josefin+Sans&display=swap" rel="stylesheet">
     <script src="/javascript/sign.js"></script>
-    <title>Document</title>
+    <title>Signup</title>
 </head>
 <body>
     <header>
@@ -15,7 +16,7 @@
             <div class="menu">
                 <a href="Home.html">Home</a>
                 <a href="#">Menu</a>
-                <a href="#">About</a>
+                <a href="About.html">About</a>
                 <a href="#">Maps</a>
                 <a href="#">Blogs</a>
                 <a href="Contact.html">Contact</a>
@@ -29,17 +30,16 @@
             <div class="information">
                <Form>
 
-                Firstname: <input type="text" name="fname" id="fname" placeholder="Fullname" maxlength="50" required>
-                Lastname: <input type="text" name="lname" id="lname" placeholder="Lastname" maxlength="50" required>
-                E-Mail: <input type="email" name="email" id="mail" placeholder="xyz@yahoo.com" required>
-                Password: <input type="password" name="password" id="password"  placeholder="A-Z,a-z,1-9,@,#,$,%,....." maxlength="16" value="" required>
-                Confirmed Password: <input type="password" name="cpassword" id="confirm-password" value="" ondragover="check()" required maxlength="16">
-                <p id="print"></p>
-                Phone-No: <input type="tel" name="phone" id="phone" value="" placeholder="+0123456789" maxlength="16" required>
-                <input type="button" value="OTP Send" required"><p class="para" ></p>
-                DOB: <input type="date" name="date" id="date" value="" required>
-                Gender: <input type="radio" name="sa" id="sa" value="male">male <input type="radio" name="sa" id="" value="male">female
-                <input type="checkbox" name="" id="">
+                <label for="">Name:</label> <input type="text" name="fname" id="fname" placeholder="Name" maxlength="50" required><br>
+                <label for="">E-Mail:</label> <input type="email" name="email" id="mail" placeholder="xyz@yahoo.com" required><br>
+                <label for="">Password:</label> <input type="password" class="pass" name="password" id="password"  placeholder="A-Z,a-z,1-9,@,#,$,%,....." maxlength="16" value="" required><br>
+                <label for="">Confirmed Password:</label> <input type="password" placeholder="********" class="cpass" name="cpassword" id="confirm-password" value="" onchange="check()" required maxlength="16"><br>
+                <p id="print"></p><br>
+                <label for="">Phone-No:</label> <input type="tel" name="phone" id="phone" value="" placeholder="+0123456789" maxlength="16" required> 
+                <input type="button" value="OTP Send" required"><p class="para" ></p><br>
+                <label for="">DOB:</label> <input type="date" name="date" id="date" value="" required><br>
+                <input type="checkbox" name="check" id="check" value=""><a href="#">Terms and Condition.</a><br>
+                <button type="submit">Submit</button><button type="reset">Reset</button>
                </Form>
             </div>
         </div>
