--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div class="menu">
             <a href="Home.html">Home</a>
             <a href="#">Menu</a>
-            <a href="About.html">About</a>
+            <a href="about.html">About</a>
             <a href="#">Maps</a>
             <a href="#">Blogs</a>
             <a href="Contact.html">Contact</a>
