--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
     <script>
         function print()
         {
-            alert('working');
+           // alert('working');
         }
     </script>
 </body>
