--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Menu</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Maps</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="https://www.blogger.com/about/?bpli=1">Blogs</a></li>
                 <li><a href="Contact.html">Contact</a></li>
         </ul>
     </div>
