--- a/Sign.html
+++ b/Sign.html
@@ -17,7 +17,7 @@
                 <a href="#">Menu</a>
                 <a href="about.html">About</a>
                 <a href="#">Maps</a>
-                <a href="#">Blogs</a>
+                <a href="https://www.blogger.com/about/?bpli=1">Blogs</a>
                 <a href="Contact.html">Contact</a>
             </div>
         </nav>    
