--- a/login page.html
+++ b/login page.html
@@ -20,10 +20,9 @@
             <!----Edit link(active)---->
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="#">Menu</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#">Maps</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="https://www.blogger.com/about/?bpli=1">Blogs</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
         </div>
