--- a/about.html
+++ b/about.html
@@ -13,10 +13,9 @@
         <div class="logo"><h1>Plan Your Vacation</h1></div>
         <div class="menu">
             <a href="Home.html">Home</a>
-            <a href="#">Menu</a>
             <a href="about.html">About</a>
             <a href="#">Maps</a>
-            <a href="#">Blogs</a>
+            <a href="https://www.blogger.com/about/?bpli=1">Blogs</a>
             <a href="Contact.html">Contact</a>
         </div>
     </nav> 
@@ -24,37 +23,89 @@
     <div class="bg-color">
         <div class="main-content">
             <div class="text-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet at vitae error praesentium mollitia ut sequi, laudantium cum! Alias eaque autem consequuntur corrupti? Quaerat saepe eos reiciendis velit corrupti, rem delectus voluptate doloremque. Soluta quisquam similique atque, perspiciatis cupiditate possimus rem non rerum nostrum dolores in, ducimus totam accusantium pariatur itaque corrupti voluptate, animi facere temporibus nulla quae tempora! Facere placeat labore consequatur vero dolores tenetur, quis sed delectus expedita, rem laudantium dolor omnis quaerat animi assumenda est iure repellat libero quibusdam voluptates ut pariatur eos. Necessitatibus officia beatae itaque ex est, temporibus inventore ad possimus atque vero, veniam iste nesciunt maiores eius consequuntur aliquam quia? Consequuntur quod dicta sint assumenda, quos doloremque illum iste et error repudiandae animi labore perferendis eos dolorem reiciendis eaque sed facilis totam delectus quis asperiores neque at nemo adipisci. Eum maiores unde aliquam deserunt labore reiciendis veniam facere, iste veritatis molestias itaque velit obcaecati incidunt saepe odio qui odit eligendi quod repudiandae consequatur possimus est accusantium? Consequuntur earum deleniti dignissimos, voluptate velit reiciendis eum officia totam deserunt debitis provident. Ipsum corporis, numquam esse pariatur voluptatum libero. Tempora nostrum quam illo quaerat ea nemo eius eos rerum, voluptas rem omnis, neque exercitationem qui obcaecati iusto.</p>
+                <p>
+                    <strong>Languages:</strong> English (fluent), Arabic (basic), German (conversational), Hindi (fluent), Russian (conversational)
+                    <br><br>
+                    <strong>Biography: </strong> Hello Travelers, Namaste. . . ! . . My name is Atiq, and I reside in Agra (Beautiful city which is known for Taj Mahal). I feel so fortunate to have,...
+                    <br><br>
+                    <strong>Credentials:</strong> Government Approved guide Master degree in medieval history of India Diploma in German language Member of Association of Government approved tour guide.
+                    <br><br>
+                    <strong>Education: </strong> I have a master degree in the "Medieval history of India" from Agra University and a diploma in the "German language".
+                    <br><br>                   
+                    I offer you a wide variety of standard tours in and around the City along and as per your specific needs and requirements, I can also design the customize tours.
+                    <br><br>
+                    <strong>Contact:</strong> 8777653433
+                </p>
             </div>
             <div class="image-content">
-                <img src="/images/back.jpg" class="img" width="300px" height="300px" alt="logo">
+                <img src="/images/guide1.JPG" class="img" width="300px" height="300px" alt="logo">
             </div>
         </div>
         <div class="main-content1">
             <div class="text-content1">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab qui molestiae magni sed, quisquam quis quas deleniti in maiores ut. Exercitationem dignissimos nostrum magnam cumque, at, quibusdam quod voluptates dolores sint atque fuga ipsum obcaecati quisquam neque ipsam ducimus delectus. Aliquid sit ab a recusandae esse ea mollitia temporibus saepe autem animi unde amet, similique quasi ipsa, porro nihil quos ullam eum at quisquam! Quo, cupiditate pariatur nam reprehenderit explicabo, vitae ea nostrum perspiciatis eligendi quia vero distinctio facere nesciunt, fugiat ratione ullam harum dolores! Accusamus, maxime ab! Deserunt quae quisquam porro, adipisci repellat perferendis sint voluptatem ad ipsum esse beatae provident ab nemo libero repudiandae quasi reiciendis unde laboriosam eos! Explicabo suscipit dolorum minus fugit aliquam tenetur et, quis sapiente illum nam, doloremque culpa. Eveniet mollitia facilis illo atque velit voluptatem sint, hic qui. Odit molestias temporibus laboriosam voluptatibus inventore dolorum velit eos alias! Quibusdam ullam ducimus iste aliquam nobis cum, amet dicta ipsa laborum nihil? Similique soluta illo a qui iusto saepe iure iste consequatur laborum explicabo. Iure dicta illo consequuntur repudiandae animi, quas consequatur eveniet minima! Exercitationem aperiam, iure officiis ullam distinctio odio incidunt placeat minima ex voluptatum iusto, mollitia earum corrupti dolor magni nam doloremque dignissimos?</p>
+                <p>
+                    <strong>Languages:</strong> English (fluent), French (fluent), Hindi (fluent)
+                    <br><br>
+                    <strong>Biography:</strong> Hello! My name is Rohit , I am privileged to brought up in a city which is capital of India , but before it all , this is one of the best historical ,...
+                    <br><br>
+                    <strong>Credentials:</strong> Authorised by ministery of tourism.
+                    <br><br>
+                    <strong>Education: </strong>I have done graduation in Bachelor of Arts, advance diploma in French and Guide training held under ministry of tourism India.
+                    <br><br>
+                    I am fully licensed, professional tourist guide since 2010.
+                    <br><br>
+                    History and arts have always been my passion, not only theoretically but also practically , my spoken English and French languages are excellent.
+                    <br><br>
+                    <strong>Contact:</strong> 9896512357
+                </p>    
             </div>
             <div class="image-content1">
-                <img src="/images/back.jpg" class="img" width="400px" height="300px" alt="logo">
+                <img src="/images/guide3.jpg" class="img" width="350px" height="280px" alt="logo">
             </div>
         </div>
         <div class="main-content">
             <div class="text-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet at vitae error praesentium mollitia ut sequi, laudantium cum! Alias eaque autem consequuntur corrupti? Quaerat saepe eos reiciendis velit corrupti, rem delectus voluptate doloremque. Soluta quisquam similique atque, perspiciatis cupiditate possimus rem non rerum nostrum dolores in, ducimus totam accusantium pariatur itaque corrupti voluptate, animi facere temporibus nulla quae tempora! Facere placeat labore consequatur vero dolores tenetur, quis sed delectus expedita, rem laudantium dolor omnis quaerat animi assumenda est iure repellat libero quibusdam voluptates ut pariatur eos. Necessitatibus officia beatae itaque ex est, temporibus inventore ad possimus atque vero, veniam iste nesciunt maiores eius consequuntur aliquam quia? Consequuntur quod dicta sint assumenda, quos doloremque illum iste et error repudiandae animi labore perferendis eos dolorem reiciendis eaque sed facilis totam delectus quis asperiores neque at nemo adipisci. Eum maiores unde aliquam deserunt labore reiciendis veniam facere, iste veritatis molestias itaque velit obcaecati incidunt saepe odio qui odit eligendi quod repudiandae consequatur possimus est accusantium? Consequuntur earum deleniti dignissimos, voluptate velit reiciendis eum officia totam deserunt debitis provident. Ipsum corporis, numquam esse pariatur voluptatum libero. Tempora nostrum quam illo quaerat ea nemo eius eos rerum, voluptas rem omnis, neque exercitationem qui obcaecati iusto.</p>
+                <p>
+                    <strong>Languages:</strong> Hindi (fluent), German (basic), American Sign Language (basic), English (fluent)
+                    <br><br>
+                    <strong>Biography:</strong> Hello, This is Aslam, I am graduate with Travel and Tourism Management and a freelance tour guide licensed by the Government of Uttar Pradesh India, ,...
+                    <br><br>
+                    <strong>Credentials:</strong> I. I am graduate with Travel and Tourism management with history as a main subject. 2.I am a government approved tour guide and I have guidelicensed,...
+                    <br><br>
+                    I would also be pleased to help you in planning your itinerary, based upon your interests and the intended duration of your stay.
+                    <br><br>
+                    I look forward to showing you my home city (Taj Mahal), and also other cities in my country so just give a chance.
+                    <br><br>  
+                    <strong>Contact:</strong> 7689565409              
+                </p>
             </div>
             <div class="image-content">
-                <img src="/images/back.jpg" class="img" width="300px" height="300px" alt="logo">
+                <img src="/images/guide2.avif" class="img" width="300px" height="300px" alt="logo">
             </div>
         </div>
         <div class="main-content1">
             <div class="text-content1">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab qui molestiae magni sed, quisquam quis quas deleniti in maiores ut. Exercitationem dignissimos nostrum magnam cumque, at, quibusdam quod voluptates dolores sint atque fuga ipsum obcaecati quisquam neque ipsam ducimus delectus. Aliquid sit ab a recusandae esse ea mollitia temporibus saepe autem animi unde amet, similique quasi ipsa, porro nihil quos ullam eum at quisquam! Quo, cupiditate pariatur nam reprehenderit explicabo, vitae ea nostrum perspiciatis eligendi quia vero distinctio facere nesciunt, fugiat ratione ullam harum dolores! Accusamus, maxime ab! Deserunt quae quisquam porro, adipisci repellat perferendis sint voluptatem ad ipsum esse beatae provident ab nemo libero repudiandae quasi reiciendis unde laboriosam eos! Explicabo suscipit dolorum minus fugit aliquam tenetur et, quis sapiente illum nam, doloremque culpa. Eveniet mollitia facilis illo atque velit voluptatem sint, hic qui. Odit molestias temporibus laboriosam voluptatibus inventore dolorum velit eos alias! Quibusdam ullam ducimus iste aliquam nobis cum, amet dicta ipsa laborum nihil? Similique soluta illo a qui iusto saepe iure iste consequatur laborum explicabo. Iure dicta illo consequuntur repudiandae animi, quas consequatur eveniet minima! Exercitationem aperiam, iure officiis ullam distinctio odio incidunt placeat minima ex voluptatum iusto, mollitia earum corrupti dolor magni nam doloremque dignissimos?</p>
+                <p>
+                    <strong>Languages: </strong> Spanish (advanced), Mandarin (basic), Hindi (fluent), English (fluent)
+                    <br><br>
+                    <strong>Biography:</strong> Namaste Dear Travelers! I am Madhavendra, or Mona - as my family and friends call me, and I invite you to experience the beauty of this amazing coun,...
+                    <br><br>
+                    <strong>Credentials:</strong> * Serving as a freelance tour guide since 2017. * Officially certified to escort clients through historical and archaeological sites, including UNES
+                    <br><br>
+                    I am able to offer a diverse range of trips : heritage and food walks, photo tours, multi-day trips, and wildlife safaris; tailored to your interests and convenience.
+                    <br><br>
+                    My areas of specialisation include the capital city of Delhi (my home since 2015), the city of the Taj Mahal - Agra (where I was born and brought up), the pink city of Jaipur (Amer Fort is my favorite fort-palace!), and Varanasi (one of the oldest cities in the world!).
+                    <br>
+                    <strong>Contact:</strong> 9878906543
+                
+                </p>    
             </div>
             <div class="image-content1">
-                <img src="/images/back.jpg" class="img" width="400px" height="300px" alt="logo">
+                <img src="/images/guide4.jpeg" class="img" width="350px" height="280px" alt="logo">
             </div>
         </div>
     </div>
+    <br><br>
     <script>
         function print()
         {
