--- a/Home.html
+++ b/Home.html
@@ -11,14 +11,16 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><h1>Plan Your Vacation</h1></div>
-            <div class="menu">
-                <a href="Home.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="#">Maps</a>
-                <a href="https://www.blogger.com/about/?bpli=1">Blogs</a>
-                <a href="Contact.html">Contact</a>
+            <div class="logo">
+                <h1>Plan Your Vacation</h1>
             </div>
+                <div class="menu">
+                     <a href="Home.html">Home</a>
+                     <a href="about.html">About</a>
+                     <a href="#">Maps</a>
+                     <a href="https://www.blogger.com/about/?bpli=1">Blogs</a>
+                     <a href="Contact.html">Contact</a>
+                </div>
         </nav>
         <main>
             <section>
@@ -28,8 +30,6 @@
                 <a href="login page.html" class="btnone">Login here</a>
             </section>
         </main>
-        
-
     </header>
     <!--another section for search bar-->
     <div class="header">
