--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
         
         <section class="left">
             <a href="login page.html" class="log">Login here</a>
-            <a href="Sign.html" class="sign">Sign here</a>
+            <a href="Sign.html" class="sign">Sign up</a>
          </section>
         <ul class="right">
             <li><a href="Home.html">Home</a></li>
