--- a/Contact.html
+++ b/Contact.html
@@ -13,7 +13,7 @@
         <div class="row-col">
         
         <section class="left">
-            <a href="login page.html" class="log">Login here</a>
+            <a href="login page.html" class="log">Login</a>
             <a href="Sign.html" class="sign">Sign up</a>
          </section>
         <ul class="right">
