--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
             <div class="menu">
                 <a href="Home.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Maps</a>
+                <a href="https://www.google.com/maps/search/Hotels/@30.0058178,78.190641,15z/data=!3m1!4b1">Maps</a>
                 <a href="https://www.blogger.com/about/?bpli=1">Blogs</a>
                 <a href="Contact.html">Contact</a>
             </div>
